--- a/main.html
+++ b/main.html
@@ -14,11 +14,12 @@
       <div id="result"></div>
 
 <script>
-    type="text/javascript" src="./script.js"
+     src="./script.js"
 
   </script>
   
 
 </body>
+	
 
 </html>
