--- a/main.html
+++ b/main.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -13,13 +15,9 @@
       </form>
       <div id="result"></div>
 
-<script>
-     src="./script.js"
-
-  </script>
+<script src="./script.js"></script>
   
 
 </body>
-	
 
 </html>
